fix(ui): hide app title and logo on small screens

--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -69,6 +69,13 @@
 	}
 }
 
+#app-name,
+#logo {
+	@media only screen and (max-width: 600px) {
+		display: none;
+	}
+}
+
 #nav-left {
 	display: flex;
 	align-items: center;
